--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Hero.cs" />
+     <Compile Include="Assets\HeroFire.cs" />
      <Compile Include="Assets\scripts\GameStatus.cs" />
      <Compile Include="Assets\scripts\LevelLoader.cs" />
  <Reference Include="UnityEngine.UI">
