--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
      <Compile Include="Assets\Hero.cs" />
      <Compile Include="Assets\HeroFire.cs" />
+     <Compile Include="Assets\Ship.cs" />
+     <Compile Include="Assets\ShipController.cs" />
      <Compile Include="Assets\scripts\GameStatus.cs" />
      <Compile Include="Assets\scripts\LevelLoader.cs" />
  <Reference Include="UnityEngine.UI">
