--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{770A7A79-C041-048C-3469-755736A5A89A}</ProjectGuid>
+	<ProjectGuid>{D7471D0B-335F-96F9-A741-3B0DE3972D06}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\FoeFire.cs" />
      <Compile Include="Assets\Hero.cs" />
      <Compile Include="Assets\HeroFire.cs" />
      <Compile Include="Assets\Ship.cs" />
